sonar-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar
  namespace: sonar
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: sonar.sonar.svc.cluster.local
spec:
  # tls:
  #   - hosts:
  #     - myfancy.domain.com
  #     secretName: my-fancy-certs
  rules:
  - host: sonar-sre.infra-blue.apfr-acm-infra.ec1.aws.aztec.cloud.allianz
    http:
      paths:
      - path: /
        backend:
          service:
            name: sonar
            port: 
              number: 9000
        pathType: ImplementationSpecific
